--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -49,3 +49,12 @@
 	border-radius: 20px;
 	box-shadow: inset 0 0 0 white;
 }
+
+html,
+body,
+#app {
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0;
+}
