--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,5 @@
+@import "./dark.scss";
+
 .flex_body {
 	display: flex;
 }
@@ -48,6 +50,24 @@
 	background-color: #dddee0;
 	border-radius: 20px;
 	box-shadow: inset 0 0 0 white;
+}
+
+/*
+  进入和离开动画可以使用不同
+  持续时间和速度曲线。
+*/
+.slide-fade-enter-active {
+	transition: all 0.5s ease-out;
+}
+
+.slide-fade-leave-active {
+	transition: all 0.5s cubic-bezier(1, 0.5, 0.8, 1);
+}
+
+.slide-fade-enter-from,
+.slide-fade-leave-to {
+	transform: translateX(20px);
+	opacity: 0;
 }
 
 html,
