--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -1,4 +1,4 @@
-$theme_background: #f2f7ff; //项目主题色
+$theme_background: #f9f4e7; //项目主题色
 $global_size: 32rpx; //全局字体大小
 $white_color: #ffffff; //全局白色字体
 $black_color: #333; //全局黑色字体
