--- a/src/styles/dark.scss
+++ b/src/styles/dark.scss
@@ -1,4 +1,4 @@
-@use "element-plus/theme-chalk/src/dark/css-vars.scss" as *;
+@use "element-plus/theme-chalk/dark/css-vars.css";
 
 :root {
 	--text-color: #333;
