--- a/src/styles/element-plus.scss
+++ b/src/styles/element-plus.scss
@@ -6,6 +6,11 @@
 	--el-menu-hover-text-color: #8400ff;
 }
 
+.dark {
+	--elSubMenu-item-hover-color: #262626;
+	--elMenu-item-hover-color: #262626;
+}
+
 .el-header {
 	--el-header-padding: "none";
 }
